# youtube-video-uploader

./: .env  .env.test  .env.test.example  .gitattributes  .gitignore  AUDIT.md  CHANGELOG.md  CLA.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  Cargo.toml  GUIDE.md  LICENSE  README.md  TESTING_PLAN.md  deny.toml  spec-profiles.md  spec.md  todo.md
.dracon/data/keys/: owner_age15xjl.pub  owner_age1f7y5.pub
.github/workflows/: ci.yml  cla.yml  release.yml
.ralph/: cleanup-and-hygiene.md  cleanup-and-hygiene.state.json  rename-and-relicense.md  rename-and-relicense.state.json  todo-loop.md  todo-loop.state.json  v0_2-multi-channel.md  v0_2-multi-channel.state.json
docker/peertube/: README.md  docker-compose.yml
docs/: LIVE_TESTS.md
fuzz/: .gitignore  Cargo.toml
fuzz/src/: lib.rs
fuzz/tests/: credential_decrypt.rs  validate_input.rs
plans/: 2026-05-12-video-uploader-next-phase-v1.md  2026-05-13-peertube-odysee-platforms-v1.md  2026-05-13-remove-apivideo-platform-v1.md  2026-05-13-remove-apivideo-v1.md  2026-05-13-video-uploader-review-2026-05-13-v1.md
video-uploader/: Cargo.toml
video-uploader-cli/: Cargo.toml
video-uploader-cli/src/: main.rs  output.rs
video-uploader-cli/tests/: cli.rs
video-uploader/examples/: basic_upload.rs  batch_upload.rs  custom_progress.rs  multi_channel.rs  upload_to_all.rs
video-uploader/src/: config.rs  error.rs  lib.rs  net.rs  profile.rs  progress.rs  registry.rs  resume.rs  upload.rs  validation.rs  youtube.rs
video-uploader/src/auth/: auth_code.rs  device_code.rs  mod.rs  refresh_token.rs  urls.rs
video-uploader/tests/: file_io.rs  http_integration.rs  integration.rs  live_helpers.rs  live_odysee.rs  live_youtube.rs  proptest.rs  wiremock.rs
youtube-uploader/: Cargo.toml
youtube-uploader-cli/: Cargo.toml
youtube-uploader-cli/src/: main.rs  output.rs
youtube-uploader-cli/tests/: cli.rs
youtube-uploader/examples/: basic_upload.rs  batch_upload.rs  custom_progress.rs  multi_channel.rs
youtube-uploader/src/: config.rs  lib.rs  net.rs  profile.rs  progress.rs  resume.rs  upload.rs  validation.rs  youtube.rs
youtube-uploader/src/auth/: auth_code.rs  device_code.rs  refresh_token.rs  urls.rs
youtube-uploader/tests/: file_io.rs  integration.rs  proptest.proptest-regressions  proptest.rs  wiremock.rs
