[workspace]
resolver = "2"
members = [
    "video-uploader",
    "video-uploader-cli",
]

[workspace.package]
version = "0.1.1"
edition = "2024"
rust-version = "1.82"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dracon/video-uploader"

[workspace.dependencies]
tokio = { version = "1.44", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
mime_guess = "2.0"
dirs = "6.0"
rand = "0.9"
