[package]
name = "video-uploader-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for video-uploader — manage auth and upload videos"

[[bin]]
name = "video-uploader"
path = "src/main.rs"

[dependencies]
video-uploader = { path = "../video-uploader" }

tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dirs.workspace = true
csv = "1.3"
serde.workspace = true
serde_json.workspace = true
dotenvy = "0.15"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"