[package]
name = "video-uploader"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Unified video upload library for YouTube and Odysee"

[dependencies]
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
async-trait = "0.1"

# Auth & crypto
aes-gcm = { version = "0.10", features = ["std"] }
rand.workspace = true
sha2 = "0.10"
pbkdf2 = "0.12"
base64 = "0.22"
zeroize = { version = "1.8", features = ["derive"] }

# File handling
mime_guess.workspace = true
url = "2.5"

# Config dirs
dirs.workspace = true

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
tempfile = "3"
proptest = "1.5"
anyhow.workspace = true
dotenvy = "0.15"

[features]
live-test = []
test-utils = []
