[package]
name = "youtube-uploader-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for youtube-uploader — manage auth and upload videos"

[[bin]]
name = "youtube-uploader"
path = "src/main.rs"

[dependencies]
youtube-uploader = { path = "../youtube-uploader" }

tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dirs.workspace = true
csv = "1.3"
serde.workspace = true
serde_json.workspace = true
dotenvy = "0.15"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"