[package]
name = "youtube-uploader-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "CLI for uploading videos to YouTube via the Data API v3 — resumable uploads, multi-channel workspaces, upload profiles, JSON output"

[[bin]]
name = "youtube-uploader"
path = "src/main.rs"

[dependencies]
youtube-uploader = { version = "0.6.0", path = "../youtube-uploader" }

tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dirs.workspace = true
csv = "1.3"
serde.workspace = true
serde_json.workspace = true
dotenvy = "0.15"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"